# book-manager

./: Cargo.toml  Makefile.toml  compose.yaml
.github/workflows/: rust_ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241104065936_start.down.sql  20241104065936_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  user.rs
api/src/model/: book.rs  user.rs
api/src/route/: auth.rs  book.rs  user.rs
api/tests/api/: book.rs
data/: initial_setup.sql
frontend/: README.md
kernel/: Cargo.toml
kernel/src/model/: id.rs  mod.rs
kernel/src/model/auth/: event.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  health.rs  user.rs
registry/src/: lib.rs
rstest-example/: Cargo.toml
rstest-example/src/: lib.rs
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
